--- a/LastMin/pom.xml
+++ b/LastMin/pom.xml
@@ -15,6 +15,8 @@
 	<description>Demo for final college project</description>
 	<properties>
 		<java.version>17</java.version>
+	
+		
 	</properties>
 	<dependencies>
 		<dependency>
@@ -25,6 +27,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -32,6 +45,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
 
 	<build>
 		<plugins>
